# Copyright (C) 2017-2020 Veronique Geoffroy (veronique.geoffroy@inserm.fr)                                #
#                                                                                                          #
############################################################################################################


For more details, please see the README file.

	- feat: Complete the “RE_gene" annotations
		When available, the regulated gene name is detailed with associated haploinsufficiency (HI), triplosensitivity (TS) and exomiser (EX) scores

	- feat: Rename of the "TS_CGscore" and "HI_CGscore" columns
		The "TS_CGscore" column has been renamed "TS"
		The "HI_CGscore" column has been renamed "HI"
	- feat: Update of the Exomiser data source 
	- feat: Add pathogenic SV annotation (from multiple sources)
	        - Pathogenic SV sources: dbVar, ClinGen, ClinVar
		- Add 12 annotation columns: P_gain_phen; P_gain_hpo; P_gain_source; P_gain_coord; P_loss_phen;P_loss_hpo; P_loss_source; P_loss_coord; 
		  P_ins_phen; P_ins_hpo; P_ins_source; P_ins_coord; P_inv_phen; P_inv_hpo; P_inv_source; P_inv_coord
		- Remove previous annotation columns from dbVar
	- feat: Add benign SV annotation (from multiple sources)
		- Benign SV sources: DGV, ClinVar, ClinGen, DDD, gnomAD, 1000g and IMH
		- Add 8 annotation columns: B_gain_source; B_gain_coord; B_loss_source; B_loss_coord; B_ins_source; B_ins_coord; B_inv_source; B_inv_coord
		- Remove previous annotation columns from DDD, DGV, gnomAD, 1000g and IMH	
	- feat: The "overlap" option default is set to 100 % to implement the 2019 ACMG classification guidelines to assess SV pathogenicity
	- feat: The "TriS_CGscore" column has been renamed "TS_CGscore"
	- feat: Add the merge of different available regulatory elements annotations (RefSeq/ENSEMBL, EnhancerAtlas, GeneHancer)
	- feat: Add the number of overlapped genes in the "full" annotation lines